crates/plotnik-lib/tests/04-emit/linking/anonymous_only_field_value.txt
Q = (binary_expression operator: (identifier))
==== diagnostics ====
error: `identifier` can't be the value of `operator`
 --> query.ptk:1:35
  |
1 | Q = (binary_expression operator: (identifier))
  |                        --------   ^^^^^^^^^^
  |                        |
  |                        field `operator`
  |
help: `operator` accepts only literal tokens — write `operator: "!="`
